# fast-approximate-filtering

./: CMakeLists.txt  README.md  assessment.cpp  assessment.hpp  cxxopts.hpp  filter.hpp  heapq.hpp  pruner_topk_optimized.hpp  utils.hpp
src/: assessment.cpp  filter.cpp  filter_spirin.hpp  pruner.hpp  pruner_cutoff.hpp  pruner_epspruning.hpp  pruner_topk.hpp
src/data_structures/: heapq.hpp
src/filtering/: filter.hpp  pruner.hpp  search_quality_metric.hpp  types.hpp
src/filters/: filter_spirin.hpp
src/pruners/: pruner_cutoff.hpp  pruner_epspruning.hpp  pruner_topk.hpp
src/utils/: composition.hpp  cxxopts.hpp  utils.hpp
